fix bench2